# ford_app

./: CMakeLists.txt  Main.qml  main.cpp  map.html  resources.qrc  vfd.frag  vfd.frag.qsb
init/: AppConfig.qml
misc/: colors.md
shaders/: vfd.frag  vfd.frag.qsb
ui/: BottomBar.qml  BottomLeftBar.qml  BottomRightBar.qml  CarInfo.qml  ColorScheme.qml  MapScreen.qml  MediaControl.qml  TopBar.qml  TopInfo.qml  qmldir
ui/custom/: CustomText.qml
